implement user feed - post feed - add post - delete post - follow user feed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "next-connect",
+  "quokka": {
+    "babel": true
+  },
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
